infra/manifests/core/traefik/middlewares.yaml
# Prefixing with /foo
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: add-prefix-dashboard
spec:
  addPrefix:
    prefix: /dashboard
