infra/manifests/core/traefik/traefik.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik
  labels:
    app: traefik

spec:
  replicas: 2
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik-ingress-controller
      containers:
        - name: traefik
          image: traefik:v3.2
          args:
            - --entryPoints.web.address=:80
            - --providers.kubernetesingress
            - --api.dashboard=true
            - --api.insecure=true
          ports:
            - name: web
              containerPort: 80
            - name: web-dashboard
              containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: traefik
spec:
  type: LoadBalancer
  selector:
    app: traefik
  ports:
    - protocol: TCP
      port: 80
      name: web
      targetPort: 80

    - protocol: TCP
      port: 8080
      name: webdashboard
      targetPort: 8080
