infra/manifests/core/traefik/ingress.yaml
# traefik-dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-dashboard
  # namespace: kube-system
  annotations:
    # traefik.ingress.kubernetes.io/router.middlewares: redirect-middleware
    # Basic auth for dashboard access
    # traefik.ingress.kubernetes.io/router.middlewares: kube-system-traefik-dashboard-auth@kubernetescrd
    
    # # TLS configuration
    # cert-manager.io/cluster-issuer: letsencrypt-prod
    
    # Optional: customize Traefik-specific ingress settings
    traefik.ingress.kubernetes.io/router.entrypoints: web
    # traefik.ingress.kubernetes.io/router.tls: "true"

spec:
  ingressClassName: traefik
  rules:
  - host: traefik.localhost
    http:
      paths:
      - path: /dashboard/
        pathType: Prefix
        backend:
          service:
            name: traefik
            port:
              number: 8080
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: traefik
            port:
              number: 8080
